# reproducile-kedro-ml-template

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.repo_name}}/.azuredevops/: pull_request_template.md
{{cookiecutter.repo_name}}/.devcontainer/: devcontainer.env  devcontainer.json  install_post_create_dependencies.sh
{{cookiecutter.repo_name}}/.devops/deploy/: deploy-docker-image-env.yml
{{cookiecutter.repo_name}}/Dockerfiles/: Dockerfile
{{cookiecutter.repo_name}}/conf/: logging.yml
{{cookiecutter.repo_name}}/conf/base/: globals.yml
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/pipelines/feature/: pipeline.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/pipelines/model/: pipeline.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/pipelines/model_input/: pipeline.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/pipelines/primary/: pipeline.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/pipelines/raw/: pipeline.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/: __main__.py  pipeline_registry.py  settings.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/pipelines/feature/: pipeline.py
{{cookiecutter.repo_name}}/tests/: test_run.py
