[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "0.1.0"
description = ""
authors =["{{cookiecutter.author_name}}"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.13,<3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
requests = "^2.31.0"
typing-extensions = "^4.10.0"


[tool.poetry.group.training.dependencies]
scikit-learn = ">=0.22.1,<1.2.1"



[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.9.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"
jupyter = "^1.0.0"
jupyterlab = "^4.1.4"
nbstripout = "^0.7.1"
ipykernel = "^6.29.3"
ipywidgets = "^8.1.2"
commitizen = "^3.18.0"
pre-commit = "^3.6.2"
ipython = "^8.12.0"


[tool.poetry.group.pipelines.dependencies]
mlflow = "^2.11.1"
adlfs = "^2024.2.0"
azureml-core = "^1.55.0.post1"
azureml-mlflow = "^1.55.0"
kedro-azureml = "^0.7.0"
kedro-docker = "^0.5.0"


[tool.poetry.group.azure.dependencies]
azure-core = "^1.30.1"
azure-identity = "^1.15.0"
azure-keyvault-secrets = "^4.8.0"
opencensus-ext-azure = "^1.1.13"
azure-storage-blob = "12.19.0"

[tool.mypy]
strict = true

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/bim_ai -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.isort]
profile = "black"
line_length = 5000

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"